datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id          String  @id @default(uuid())
  name        String
  username    String  @unique
  email       String  @unique
  password    String  @unique
  likedGames  String[]
  UserMatch   UserMatch[]
}

model Match {
  id          String  @id @default(uuid())
  game        String
  link        String
  local       String
  description String
  date        String
  time        String
  UserMatch   UserMatch[]
}

model UserMatch {
  userId      String
  matchId     String
  User        User?    @relation(fields: [userId], references: [id], onDelete: Cascade)
  Match       Match?   @relation(fields: [matchId], references: [id], onDelete: Cascade)

  @@id([userId, matchId])
}
